log/build_2021-09-09_14-48-24/py_pubsub/stderr.log
  File "/root/rosdir/install/py_pubsub/lib/python3.8/site-packages/py_pubsub/sub.py", line 5
    from nav_msgs/msg import Odometry
                 ^
SyntaxError: invalid syntax

